// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Header large with preTitle 1`] = `
<div>
  <div
    className="MuiGrid-root Header-container-1168 Header-largeContainer-1169 MuiGrid-container MuiGrid-justify-xs-space-around"
  >
    <div
      className="MuiGrid-root Header-bg-1173 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
    >
      <div
        className="MuiGrid-root Header-largeTextContainer-1176 MuiGrid-container"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-11"
        >
          <p
            className="MuiTypography-root Text-softyXL-1282 Header-title-1170 Header-preTitleLarge-1172 MuiTypography-body1"
          >
            Millainen on sinun unelmiesi vuokra-asunto?
          </p>
          <h1
            className="MuiTypography-root undefined Header-title-1170 undefined MuiTypography-h1"
          >
            Löydä unelmiesi koti
          </h1>
          <div
            className="MuiTypography-root Text-softyXL-1282 Header-title-1170 MuiTypography-body1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header no image on mobile 1`] = `
<div>
  <div
    className="MuiGrid-root Header-container-1470 MuiGrid-container MuiGrid-justify-xs-space-around"
  >
    <div
      className="MuiGrid-root Header-bg-1475 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
    >
      <div
        className="MuiGrid-root Header-textContainer-1476 MuiGrid-container"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-11"
        >
          <h3
            className="MuiTypography-root undefined Header-title-1472 MuiTypography-h3"
          >
            Viestit
          </h3>
          <div
            className="MuiTypography-root Text-softyL-1583 Header-title-1472 MuiTypography-body1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with preTitle 1`] = `
<div>
  <div
    className="MuiGrid-root Header-container-866 MuiGrid-container MuiGrid-justify-xs-space-around"
  >
    <div
      className="MuiGrid-root Header-bg-871 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
    >
      <div
        className="MuiGrid-root Header-textContainer-872 MuiGrid-container"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-11"
        >
          <p
            className="MuiTypography-root Text-softyL-979 Header-title-868 Header-preTitleSmall-869 MuiTypography-body1"
          >
            Millainen on sinun unelmiesi vuokra-asunto?
          </p>
          <h3
            className="MuiTypography-root undefined Header-title-868 MuiTypography-h3"
          >
            Löydä unelmiesi koti
          </h3>
          <div
            className="MuiTypography-root Text-softyL-979 Header-title-868 MuiTypography-body1"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with subtitle 1`] = `
<div>
  <div
    className="MuiGrid-root Header-container-152 MuiGrid-container MuiGrid-justify-xs-space-around"
  >
    <div
      className="MuiGrid-root Header-bg-157 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
    >
      <div
        className="MuiGrid-root Header-textContainer-158 MuiGrid-container"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-11"
        >
          <h3
            className="MuiTypography-root undefined Header-title-154 MuiTypography-h3"
          >
            Moi Aleksi, mukava tavata!
          </h3>
          <div
            className="MuiTypography-root Text-softyL-265 Header-title-154 MuiTypography-body1"
          >
            Ei huomisesta kukaan koskaan tiedä, siksi anna vaan elämän sua viedä.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Header with subtitle and lifted content element 1`] = `
<div>
  <div>
    <div
      className="MuiGrid-root Header-container-509 MuiGrid-container MuiGrid-justify-xs-space-around"
    >
      <div
        className="MuiGrid-root Header-bg-514 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6"
      >
        <div
          className="MuiGrid-root Header-textContainer-515 MuiGrid-container"
        >
          <div
            className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-11"
          >
            <h3
              className="MuiTypography-root undefined Header-title-511 MuiTypography-h3"
            >
              Moi Aleksi, mukava tavata!
            </h3>
            <div
              className="MuiTypography-root Text-softyL-622 Header-title-511 MuiTypography-body1"
            >
              Ei huomisesta kukaan koskaan tiedä, siksi anna vaan elämän sua viedä.
            </div>
          </div>
        </div>
      </div>
    </div>
    <section
      className="PageContent-container-660"
    >
      <div
        className="Box-box-667 Box-pageSection-669 Box-negativeTopMargin-679"
      >
        <div
          className="MuiPaper-root MuiCard-root makeStyles-root-681 MuiPaper-elevation1 MuiPaper-rounded"
          style={
            Object {
              "background": "white",
              "height": "100px",
              "marginLeft": "auto",
              "marginRight": "auto",
              "position": "relative",
            }
          }
        >
          CONTENT
        </div>
      </div>
    </section>
  </div>
</div>
`;
